<resources>
    <string name="app_name">Zadanie4</string>
    <string name="text1">ZmianaAtrybutu1a</string>
    <string name="text2">ZmianaAtrybutu1b</string>
    <string name="text3">ZmianaAtrybutu1c</string>
    <string name="text4">SubMenu</string>
    <string name="text5">ZmianaAtrybutu2a</string>
    <string name="text6">ZmianaAtrybutu2b</string>
    <string name="text7">ZmianaAtrybutu2c</string>
    <string name="text8">Element numer jeden</string>
    <string name="text9">Element2</string>
    <string name="text10">Opcja1</string>
    <string name="text11">Opcja2</string>
    <string name="text12">Opcja3</string>
    <string name="text13">ContextMenu</string>
    <string name="text14">ContextMenu 2</string>
    <string name="text15">Opcja4</string>
    <string name="text16">Opcja5</string>
    <string name="text17">Opcja6</string>
    <string name="text18">Element1 zmiana pierwsza</string>
    <string name="text19">Element1 zmiana druga</string>
    <string name="text20">Element1 zmiana  trzecia</string>
    <string name="text21">Element numer trzy</string>
    <string name="text22">RozmiarCzcionki</string>
    <string name="text23">KolorCzcionki</string>
    <string name="text24">KolorTla</string>
    <string name="text25">Element4</string>
    <string name="text26">Zadanie numer 4</string>
    <string name="text27">Bartlomiej Olejniczak</string>
    <string name="text28">Aktywnosc1</string>
    <string name="text29">Aktywnosc2</string>
    <string name="text30">Aktywnosc2 Element numer jeden</string>
    <string name="text31">Element2Aktywnosc2</string>
    <string name="text32">Aktywnosc2ContextMenu</string>
    <string name="text33">Aktywnosc2ContextMenu 2</string>
    <string name="text34">Aktywnosc2 Element1 zmiana pierwsza</string>
    <string name="text35">Aktywnosc2 Element1 zmiana druga</string>
    <string name="text36">Aktywnosc2 Element1 zmiana trzecia</string>
    <string name="text37">Aktywnosc2 Element4</string>
    <string name="text38">Aktywnosc2 Element3</string>
</resources>
