<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action1"
        android:title="@string/text1">


    </item>

    <item
        android:id="@+id/action2"
        android:title="@string/text2"
        >
    </item>

    <item
        android:id="@+id/action3"
        android:title="@string/text3"

       >

    </item>

    <item
        android:id="@+id/action4"

        android:title="@string/text4"
        android:icon="@drawable/iconsubmenu">
        <menu >
            <group android:id="@+id/group3"
                android:checkableBehavior="single"
                >
                <item android:id="@+id/submenu3a"
                    android:title="@string/text5"
                    android:icon="@drawable/iconcolor1"/>
                <item android:id="@+id/submenu3b"
                    android:title="@string/text6"
                    android:icon="@drawable/iconcolor3"/>
                <item android:id="@+id/submenu3c"
                    android:title="@string/text7"
                    android:icon="@drawable/iconcolor2"/>
            </group>
        </menu>

    </item>

</menu>