<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Aktywnosc1">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:typeface="serif"
        android:id="@+id/ele1"
        android:text="@string/text8"/>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text9"
    android:textColor="#000000"
    android:textSize="20sp"
        android:background="#A1887F"
    android:id="@+id/ele2"
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text13"
        android:id="@+id/cont1"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text14"
        android:id="@+id/cont2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="casual"
        android:id="@+id/ele3"
        android:text="@string/text21"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text25"
        android:textColor="#000000"
        android:textSize="20sp"
        android:background="#455A64"
        android:id="@+id/ele4"
        />

</LinearLayout>